Tests/test_output/Inference/ClusterInference/test_pc.txt
WARNING: package sun.awt.X11 not in java.desktop
WARNING: package sun.awt.X11 not in java.desktop

ERROR: Undefined function 'wfield' for input arguments of type 'double'.

Error in test_pc (line 22)
noise = fconv(wfield(bigdim, nsubj).field, FWHM, 2);
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error in run (line 112)
evalin('caller', strcat(scriptStem, ';'));
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

STATUS: FAIL
